// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Controls component renders correctly on a dark background 1`] = `
<div
  style="height: 10vh; width: 90vw; position: absolute; bottom: 0px; padding: 0px 5vw 5vh 5vw;"
>
  <audio
    class="react-audio-player "
    id=""
    preload="metadata"
    src=""
    title=""
  >
    <p>
      Your browser does not support the 
      <code>
        audio
      </code>
       element.
    </p>
  </audio>
  <div
    style="display: flex; align-items: center; justify-content: center;"
  >
    <div
      style="font-size: 48px;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-step-backward fa-w-14 "
        data-icon="step-backward"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M64 468V44c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v176.4l195.5-181C352.1 22.3 384 36.6 384 64v384c0 27.4-31.9 41.7-52.5 24.6L136 292.7V468c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      style="font-size: 96px; margin: 0px 96px;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-play fa-w-14 "
        data-icon="play"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      style="font-size: 48px;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-step-forward fa-w-14 "
        data-icon="step-forward"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M384 44v424c0 6.6-5.4 12-12 12h-48c-6.6 0-12-5.4-12-12V291.6l-195.5 181C95.9 489.7 64 475.4 64 448V64c0-27.4 31.9-41.7 52.5-24.6L312 219.3V44c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: center; margin-top: 48px; font-size: 32px;"
  >
    <div>
      00:00
    </div>
    <input
      class="light"
      max="0"
      min="0"
      style="width: 100%; margin: 0px 24px;"
      type="range"
      value="0"
    />
    <div>
      00:00
    </div>
  </div>
</div>
`;

exports[`The Controls component renders correctly with default props 1`] = `
<div
  style="height: 10vh; width: 90vw; position: absolute; bottom: 0px; padding: 0px 5vw 5vh 5vw;"
>
  <audio
    class="react-audio-player "
    id=""
    preload="metadata"
    src=""
    title=""
  >
    <p>
      Your browser does not support the 
      <code>
        audio
      </code>
       element.
    </p>
  </audio>
  <div
    style="display: flex; align-items: center; justify-content: center;"
  >
    <div
      style="font-size: 48px;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-step-backward fa-w-14 "
        data-icon="step-backward"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M64 468V44c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v176.4l195.5-181C352.1 22.3 384 36.6 384 64v384c0 27.4-31.9 41.7-52.5 24.6L136 292.7V468c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      style="font-size: 96px; margin: 0px 96px;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-play fa-w-14 "
        data-icon="play"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      style="font-size: 48px;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-step-forward fa-w-14 "
        data-icon="step-forward"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M384 44v424c0 6.6-5.4 12-12 12h-48c-6.6 0-12-5.4-12-12V291.6l-195.5 181C95.9 489.7 64 475.4 64 448V64c0-27.4 31.9-41.7 52.5-24.6L312 219.3V44c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: center; margin-top: 48px; font-size: 32px;"
  >
    <div>
      00:00
    </div>
    <input
      class="dark"
      max="0"
      min="0"
      style="width: 100%; margin: 0px 24px;"
      type="range"
      value="0"
    />
    <div>
      00:00
    </div>
  </div>
</div>
`;

exports[`The Controls component renders with the data loaded and the correct song playing 1`] = `
<div
  style="height: 10vh; width: 90vw; position: absolute; bottom: 0px; padding: 0px 5vw 5vh 5vw;"
>
  <audio
    class="react-audio-player "
    id=""
    preload="metadata"
    src="http://localhost:5000/api/song/1234567890"
    title="http://localhost:5000/api/song/1234567890"
  >
    <p>
      Your browser does not support the 
      <code>
        audio
      </code>
       element.
    </p>
  </audio>
  <div
    style="display: flex; align-items: center; justify-content: center;"
  >
    <div
      style="font-size: 48px;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-step-backward fa-w-14 "
        data-icon="step-backward"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M64 468V44c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v176.4l195.5-181C352.1 22.3 384 36.6 384 64v384c0 27.4-31.9 41.7-52.5 24.6L136 292.7V468c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      style="font-size: 96px; margin: 0px 96px;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-play fa-w-14 "
        data-icon="play"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      style="font-size: 48px;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-step-forward fa-w-14 "
        data-icon="step-forward"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M384 44v424c0 6.6-5.4 12-12 12h-48c-6.6 0-12-5.4-12-12V291.6l-195.5 181C95.9 489.7 64 475.4 64 448V64c0-27.4 31.9-41.7 52.5-24.6L312 219.3V44c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: center; margin-top: 48px; font-size: 32px;"
  >
    <div>
      00:00
    </div>
    <input
      class="dark"
      max="0"
      min="0"
      style="width: 100%; margin: 0px 24px;"
      type="range"
      value="0"
    />
    <div>
      00:00
    </div>
  </div>
</div>
`;
